--- a/lecture-3-thermodynamic-model.tex
+++ b/lecture-3-thermodynamic-model.tex
@@ -6,7 +6,8 @@
 %
 \begin{frame}{Activities -- the effective concentrations of the species}
 \begin{itemize}
-\item Let $c_{i}$ denote concentration of species $i$ (\textbf{Note}: sometime in literature it is denoted by $[i]$, but is different to species amount $n_i$).
+\item Let $c_{i}$ denote concentration of species $i$ (\textbf{Note}: sometime in literature it is denoted by $[i]$, 
+but i$[i] \neq n_i$).
 \pause
 \item If we would use $c_{i}$ instead of activities $a_{i}$ to calculate the chemical potentials, then
 \[
@@ -39,6 +40,8 @@ a_{i}=\gamma_{i}(T,P,c) \tfrac{c_i}{c_i^0},
 %
 where $\gamma_{i}$ is an \alert{\textbf{activity coefficient}}, a function
 of $(T,P,c)$, with $c$ denoting a {\bf vector of concentrations of all species in the solution}. 
+\pause
+\item $\gamma_i$ depends on the whole vector $c$, not just its $i$th component $c_i$.
 \pause
 \item To calculate $\gamma_{i}$, there are different (theoretical) \alert{\textbf{activity models}}:
 \begin{itemize}
@@ -159,7 +162,7 @@ by mixing 1 kg of H$_{2}$O and:
 \end{itemize}
 \vskip 5pt
 \begin{center}
-\href{http://etc.ch/paWu}{\textcolor{indigo(dye)}{\tt http://etc.ch/paWu}} or 
+\href{http://etc.ch/qjLF}{\textcolor{indigo(dye)}{\tt http://etc.ch/qjLFhttp://etc.ch/qjLF}} or 
 \includegraphics[height=0.45\columnwidth]{figures/activity-models/poll-ionic-strength.png}
 \end{center}
 \hiddenpause
@@ -284,7 +287,7 @@ It is accurate for $I$ is in the range 0.1–0.7 molal, which is equivalent to 1
 \]
 %
 \begin{center}
-\href{http://etc.ch/paWu}{\textcolor{indigo(dye)}{\tt http://etc.ch/paWu}} \quad or \quad 
+\href{http://etc.ch/qjLF}{\textcolor{indigo(dye)}{\tt http://etc.ch/qjLF}} \quad or \quad 
 \includegraphics[height=0.18\columnwidth]{figures/activity-models/poll-ionic-strength.png}
 \end{center}
 %
@@ -345,7 +348,7 @@ x_{\mathsf{H_{2}O\text{(aq)}}}=\frac{n_{\mathsf{H_{2}O\text{(aq)}}}}{\text{sum o
 \item \alert{\textbf{Question}}: Consider pure water as a solution.
 What is the value of ionic strength $I$ and the activity of water $a_{\sf H_2O}$ ?  
 \begin{center}
-	\href{http://etc.ch/paWu}{\textcolor{indigo(dye)}{\tt http://etc.ch/paWu}} \quad or \quad 
+	\href{http://etc.ch/qjLF}{\textcolor{indigo(dye)}{\tt http://etc.ch/qjLF}} \quad or \quad 
 	\includegraphics[height=0.1\columnwidth]{figures/activity-models/poll-ionic-strength.png}
 \end{center}
 \hiddenpause
@@ -485,7 +488,7 @@ m_{\mathsf{CO_{2}\text{(aq)}}}=\frac{1}{\gamma_{\mathsf{CO_{2}\text{(aq)}}}} \, 
 \item \alert{\textbf{Quiz}}: What happens to $m_{\mathsf{CO_{2}\text{(aq)}}}$ when $\gamma_{\mathsf{CO_{2}\text{(aq)}}}$
 increases with $I$ for constant $(T, P)$?
 \begin{center}
-	\href{http://etc.ch/paWu}{\textcolor{indigo(dye)}{\tt http://etc.ch/paWu}} \quad or \quad 
+	\href{http://etc.ch/qjLF}{\textcolor{indigo(dye)}{\tt http://etc.ch/qjLF}} \quad or \quad 
 	\includegraphics[height=0.14\columnwidth]{figures/activity-models/poll-ionic-strength.png}
 \end{center}
 \hiddenpause
@@ -864,7 +867,7 @@ where $Z=\frac{PV}{RT}$ is compressibility factor,
 \item \alert{\textbf{Quiz}}: Which value of $Z$ are we interested
 in for CO$_{2}$(g)?
 \begin{center}
-	\href{http://etc.ch/paWu}{\textcolor{indigo(dye)}{\tt http://etc.ch/paWu}} \quad or \quad 
+	\href{http://etc.ch/qjLF}{\textcolor{indigo(dye)}{\tt http://etc.ch/qjLF}} \quad or \quad 
 	\includegraphics[height=0.18\columnwidth]{figures/activity-models/poll-ionic-strength.png}
 \end{center} 
 \only<6->{
