--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,5 @@
-\documentclass[english,handout, aspectratio=169,10pt]{beamer} % slides for students
-%\documentclass[english,aspectratio=169,10pt]{beamer} % slides for the lectures
+%\documentclass[english,handout, aspectratio=169,10pt]{beamer} % slides for students
+\documentclass[english,aspectratio=169,10pt]{beamer} % slides for the lectures
 %===================================================================
 % Beamer theme and its fine tune
 %===================================================================
@@ -251,9 +251,9 @@ NO F 61}
 	\tableofcontents%[hidea b llsubsections]
 \end{frame}
 %
-\input{lecture-1-introduction}
+%\input{lecture-1-introduction}
 %\input{lecture-2-chemical-equilibrium}
-%\input{lecture-3-thermodynamic-model}
+\input{lecture-3-thermodynamic-model}
 %\input{lecture-4-numerical-method-equilibrium}
 %project descriptions
 %\input{lecture-5-chemical-kinetics}
@@ -269,10 +269,14 @@ NO F 61}
 
 \quad $\bullet$ Interactive MyBinder Reaktoro v2: \href{https://mybinder.org/v2/gh/mtsveta/reaktoro-v2-workshop/main?labpath=overview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
 \quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v2:  \href{https://github.com/mtsveta/reaktoro-v2-workshop.git}{\textcolor{indigo(dye)}{\it link}} \\
+\quad $\bullet$ Link with instruction no how to start working with Jupyter notebooks for Reaktoro v2:
+\href{https://paper.dropbox.com/doc/Geofluids-Working-with-Reaktoro-v2.0-Conda-package--BgpaaN5GdrEzKNr1hwmmdL4dAQ-y6tZcjcegWI3PpsmCXjgk}{\textcolor{indigo(dye)}{\it link}} \\[5pt]
 %
 % \quad $\bullet$ Interactive MyBinder Reaktoro v1: \href{https://mybinder.org/v2/gh/reaktoro/reaktoro-jupyter/master?filepath=tutorial%2Foverview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
 \quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v1:  \href{https://github.com/mtsveta/reaktoro-jupyter.git}{\textcolor{indigo(dye)}{\it link}} \\
 \quad $\bullet$ Videos explaining some Jupyter notebooks with Reaktoro v1:  \href{https://polybox.ethz.ch/index.php/s/qStBnxUnry648U5}{\textcolor{indigo(dye)}{\it link}} \\
+%
+
 \end{frame}
 
 
