--- a/lecture-2-chemical-equilibrium.tex
+++ b/lecture-2-chemical-equilibrium.tex
@@ -8,16 +8,16 @@
 %
 \begin{frame}{Chemical equilibrium from a thermodynamic perspective}
 \begin{itemize}
-\item A system under prescribed temperature $T$ and pressure $P$ is in
-chemical equilibrium if its \textbf{Gibbs energy} $G$ is at a minimum. 
+\item A system under prescribed temperature $T$ and pressure $P$ is \textbf{in
+chemical equilibrium} if its \textbf{Gibbs energy} $G$ is at a minimum. 
 \begin{itemize}
-\item this results from the \emph{second law of thermodynamic} that says
+\item This results from the \emph{second law of thermodynamic} that says
 that a system tends to a state of maximum entropy $S$. 
-\item the minimum Gibbs energy condition arises because $G := H - T\,S$, where
+\item The minimum Gibbs energy condition arises because $G := H - T\,S$, where
 $H$ is enthalpy. 
 \item \textbf{Note}: \\
-\alert{\textbf{Entropy}} $S$ is the measure of a system's thermal energy per unit temperature that is unavailable for doing useful work. \\ 
-\alert{\textbf{Enthalpy}} $H$ is a property of a thermodynamic system, defined as the sum of the system's internal energy and the product of its pressure and volume.
+\quad (i) \; \alert{\textbf{Entropy}} $S$ is the measure of a system's thermal energy per unit temperature that is unavailable for doing useful work. \\ 
+\quad (ii)\; \alert{\textbf{Enthalpy}} $H$ is a property of a thermodynamic system, defined as the sum of the system's internal energy and the product of its pressure and volume, i.e, $H = E + P\, V$, where $E$ is the internal energy.
 \end{itemize}
 \pause
 \item Analogy to the \textbf{mechanical equilibrium}: a \emph{ball rolling down a hill}. 
@@ -39,7 +39,7 @@ We want to find the \textbf{final position} of the ball that results in a minimu
 \item In \textbf{thermodynamics}, the species in a chemical system seeking a state of chemical
 equilibrium is also \textbf{constrained by some conditions}: 
 \begin{itemize}
-\item \textbf{its nonnegativity} (species amounts cannot be negative),
+\item \textbf{its non-negativity} (species amounts cannot be negative),
 \item \alert{\textbf{mass conservation}}.
 \end{itemize}
 \end{itemize}
@@ -55,14 +55,14 @@ equilibrium is also \textbf{constrained by some conditions}:
 \vskip 10pt
 To illustrate \alert{\textbf{mass conservation constraints}} the following problem: 
 \begin{itemize}
-\item mix 100 moles of H$_{2}$O and 2 moles of CO$_{2}$
-and \textbf{calculate the equilibrium state of the system}. 
+\item we mix 100 moles of H$_{2}$O and 2 moles of CO$_{2}$
+and \textbf{calculate the equilibrium state of the system}, 
 \item these two substances will react and form several species (H$^{+}$,
-HCO$_{3}^{-}$ etc.).
+HCO$_{3}^{-}$ etc).
 \end{itemize}
 \hiddenpause
 \alert{\textbf{Quiz}}: at chemical equilibrium, what can we tell about 
-the amounts of H, O, C, Z?
+the amounts of H, O, C?
 
 \begin{center}
 \href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
@@ -73,7 +73,7 @@ or
 \end{center}
 
 \hiddenpause
-\textbf{Answer}: 200 mols of H, 104 mols of O, and 2 mols of C,  the final charge must be equal to the initial charge. 
+\textbf{Answer}: 200 moles of H, 104 moles of O, and 2 moles of C,  Z = 0 (the final charge must be equal to the initial charge). 
 \end{frame}
 %
 \begin{frame}{Mass conservation constraints in chemical equilibrium\, ii}
@@ -83,9 +83,9 @@ or
 		the system (i.e., amount of species, usually defined by vector 
 		$n = [n_{\sf H^{+}}, n_{\sf HCO_{3}^{-}}, \ldots]$) that 
 		\textbf{minimizes its Gibbs energy} and simultaneously satisfies 
-		\alert{\textbf{mass conservation}} of:
+		\alert{\textbf{mass conservation}} of
 		\begin{itemize}
-			\item \textbf{chemical elements}; and
+			\item \textbf{chemical elements} and
 			\item \textbf{electric charge}.
 		\end{itemize}
 		\pause
@@ -129,9 +129,9 @@ CO$_{2}$(aq) & \tabularnewline
 \begin{itemize}
 \item What are the amounts of each chemical species at equilibrium? 
 \item Which phases exist at equilibrium? 
-\item How much carbon dioxide, CO$_{2}$(g), dissolved as carbon-bearing
-aqueous species? 
-\item How much solvent water, H$_{2}$O(aq), evaporated to the gas phase
+\item How much carbon dioxide CO$_{2}$(g) has dissolved as carbon-bearing
+aqueous species, turned into CO$_{2}$(aq)? 
+\item How much solvent water H$_{2}$O(aq) evaporated to the gas phase
 as vapor H$_{2}$O(g)? 
 \item What is the concentration of H$^{+}$(aq), which is related to pH
 (acidity)?
@@ -147,7 +147,7 @@ as vapor H$_{2}$O(g)?
 system at equilibrium}
  
 \begin{itemize}
-\item At equilibrium, the amounts of the species:
+\item At equilibrium, the amounts of the species
 \[
 n=(n_{\mathsf{H_{2}O\text{(aq)}}},\;n_{\mathsf{H^{+}\text{(aq)}}},\;n_{\mathsf{OH^{-}\text{(aq)}}},\;n_{\mathsf{CO_{3}^{2-}\text{(aq)}}},\;n_{\mathsf{HCO_{3}^{-}}\text{(aq)}},\;n_{\mathsf{CO_{2}\text{(aq)}}},\;n_{\mathsf{CO_{2}\text{(g)}}},\;n_{\mathsf{H_{2}O\text{(g)}}})
 \]
@@ -159,8 +159,8 @@ n_{\mathsf{CO_{3}^{2-}\text{(aq)}}}+n_{\mathsf{HCO_{3}^{-}\text{(aq)}}}+n_{\math
 n_{\mathsf{H^{+}\text{(aq)}}}-n_{\mathsf{OH^{-}\text{(aq)}}}-2n_{\mathsf{CO_{3}^{2-}\text{(aq)}}}-n_{\mathsf{HCO_{3}^{-}\text{(aq)}}} & =b_{\mathsf{Z}}
 \end{alignat}
 }{\small\par}
-\item \alert{\textbf{Exercise}}: Show that, for this specific system, the conservation
-equation for electrical charge, Z, is \emph{linearly dependent} on
+\item For this specific system, we can show that 
+the {\bf equation for electrical charge Z is linearly dependent} on
 the other equations.
 %\item \alert{\textbf{Hint}}: Show that the last row 
 %(4) = (1) - 2 (2) + 4 (3).
@@ -174,7 +174,7 @@ the other equations.
 %
 \begin{frame}{Mass conservation constraints written in matrix form}
 
-The mass balance equations can be written in matrix form: \\[10pt]
+The {\bf mass balance equations} can be written in matrix form: \\[10pt]
 
 \begin{cbox}{Mass conservation equation in matrix form}{\Large{}
 \[
@@ -215,7 +215,7 @@ Consider the following ordering for species and elements in the system:
 \par\end{center}
 
 \alert{\textbf{Exercise:}} Construct the formula matrix $A$ for this system, where \\
-\alert{\textbf{the coefficient $A_{ij}$ characterises the contribution of species 
+\alert{\textbf{the coefficient $A_{ji}$ characterises the contribution of species 
 $i$ into the element $j$}}. 
 \end{frame}
 %
@@ -335,6 +335,7 @@ b_{\mathsf{Z}}
 
 \lstinputlisting[language=Python, caption=Calculating the amounts of elements using Python]{python-files/mass-balance-with-blanks.py}	
 
+% Source code: \href{https://polybox.ethz.ch/index.php/s/ku86DyuR6nvW2Zl}{\textcolor{indigo(dye)}{\it link}}.
 \end{frame}
 %
 % --------------------------------------------------------------------------------------------------------------------%
@@ -471,7 +472,7 @@ to transform to B.
 \item \alert{\textbf{Quiz}}: what is the tendency for CO$_{2}$(g) in each of cases?
 %
 \hiddenpause
-%
+
 \item \alert{\textbf{Answer}}:
 \begin{itemize}
 \item \textbf{Case I}: Since $\mu_{\mathsf{CO_{2}\text{(g)}}}=\mu_{\mathsf{CO_{2}\text{(aq)}}}$,
@@ -503,7 +504,7 @@ tend to transform to C and D
 and D are in equilibrium 
 \item $\mu_{\sf A}+\mu_{\sf B}<\mu_{\sf C}+2\,\mu_{\sf D}$: substances C and D will
 tend to transform to A and B
-\item \alert{\bf Warning:} Note the coefficients in the reactions are used
+\item \alert{\bf Note:} the coefficients in the reactions are used
 when checking the direction of the reaction!
 \[
 \mathsf{\underline{1}\,A+\underline{1}\,B\rightleftharpoons\underline{1}\,C+\underline{2}\,D}
@@ -703,7 +704,7 @@ At the equilibrium point, the \textbf{Gibbs free energy at its minimum}.
 \item The \alert{\textbf{chemical potential $\mu_{i}$}} of a species $i$ is defined as
 \[
 \boxed{
-\mu_{i}=\mu_{i}^{\circ}+RT\ln a_{i}.
+\mu_{i}:=\mu_{i}^{\circ}+RT\ln a_{i}.
 }
 \]
 \vskip -10pt
@@ -718,12 +719,10 @@ the species at $(T,P)$;
 \pause
 \item $a_{i}$ is the \alert{\bf activity} of the species at $(T,P,n_{\Phi})$,
 where $n_{\Phi}$ is the vector of amounts of species in the phase
-where species $i$ lives.
-\begin{itemize}
-\item \textbf{Note}: the activity of an aqueous species only depends on the
+where species $i$ lives. \\
+\textbf{Note}: the activity of an aqueous species only depends on the
 amounts of the aqueous species, and not on the amounts of gases, minerals,
 etc.!
-\end{itemize}
 
 \end{itemize}
 \end{frame}
@@ -741,12 +740,11 @@ in which $a_{i}=1$ is assumed.
 \item For a gas: 
 \begin{itemize}
 \item $\mu_{i}^{\circ}$ is the chemical potential
-of the gas at a hypothetical ideal state with $P^{\circ}=\unit[1]{bar}$;
-\item $\mu_{i}^{\circ}=\mu_{i}^{\circ}(T)$ (i.e., \textbf{no
-pressure dependence}).
+of the gas at a hypothetical ideal state with $P^{\circ}=\unit[1]{bar}$ $\Rightarrow$ \\
+then, $\mu_{i}^{\circ}=\mu_{i}^{\circ}(T)$ (i.e., \textbf{dependence on the pressure is excluded}).
 \end{itemize}
 \pause
-\item For aqueous and mineral species, ${\mu_{i}^{\circ}=\mu_{i}^{\circ}(T,P)}$.
+\item For aqueous and mineral species, ${\mu_{i}^{\circ}=\mu_{i}^{\circ}(T,P)}$ (\textbf{dependence on the pressure cannot be excluded}).
 \pause
 \item Values for $\mu_{i}^{\circ}$ are calculated using equations of state,
 which can be computationally expensive.
@@ -826,7 +824,7 @@ which can be computationally expensive.
 \item At equilibrium, the following \alert{\textbf{mass action equation}} must be
 satisfied:
 \[
-K=\frac{a_{\sf C}a_{\sf D}^{3}}{a_{\sf A}a_{\sf B}^{2}},
+K :=\frac{a_{\sf C}a_{\sf D}^{3}}{a_{\sf A}a_{\sf B}^{2}},
 \]
 where $K=K(T,P)$ is the \alert{\textbf{equilibrium constant}} of the reaction.
 \pause
@@ -850,10 +848,11 @@ where
 the \alert{\textbf{general mass action equation}} is
 \[
 \boxed{
-K=\dfrac{\prod_{p}a_{p}^{\nu_{p}}}{\prod_{r}a_{r}^{\nu_{r}}}.
+K := \dfrac{\prod_{p}a_{p}^{\nu_{p}}}{\prod_{r}a_{r}^{\nu_{r}}}.
 }
 \]
 \pause
+\vskip -5pt
 \item Mass action equation is \alert{\textbf{strongly non-linear}}.
 \end{itemize}
 \ecol
@@ -1113,13 +1112,14 @@ The \alert{\textbf{solubility}} is the maximum amount of a substance that can be
 	%
 	\small
 	\begin{itemize}
-		\item The \alert{\bf solubility product constant $K_{sp}$} is an equilibrium constant for a substances dissolving in an aqueous solution. 
+		\item The \alert{\bf solubility product constant $K_{\sf sp}$} is the {\bf equilibrium constant} $K$ for a solid substances 
+		dissolving in an aqueous solution.
 		%
 		\pause
 		\item It represents the {\bf level/limit at which a solute dissolves in aqueous solution}.
 		%
 		\pause
-		\item {\bf More soluble} a substance is, the {\bf higher the $K_{sp}$} value it has.
+		\item {\bf More soluble} a substance is, the {\bf higher the $K_{\sf sp}$} value it has.
 		%
 		\pause
 		\item Consider the general dissolution reaction below (in aqueous solutions)
@@ -1130,12 +1130,15 @@ The \alert{\textbf{solubility}} is the maximum amount of a substance that can be
 		\vskip -10pt
 		%
 		\pause
-		\item Let $\mathsf{[C]}$ and  $\mathsf{[D]}$ denote the molarities  (mol/Lw) or concentrations (mol/kgw)  of the products (C  and  D), then $K_{sp} $ is defined as
+		\item If $\mathsf{[C]}$ and  $\mathsf{[D]}$ denote the molarities  (mol/Lw) or concentrations (mol/kgw) of the products (or activities), then $K_{\sf sp} $ is defined as
 		\[
-		K_{sp} = [\mathsf{C}]^c \cdot [\mathsf{D}]^d,
+		K_{\sf sp} = [\mathsf{C}]^c \cdot [\mathsf{D}]^d,
 		\] 
 		%
-		{\bf Note}: the reactant A is not included in the $K_{sp}$  equation, because its concentrations do not change the expression. Water $H_2O$ would be excluded as well.	
+		{\bf Note}: \\
+		\quad $\bullet$ the reactant A is not included in the $K_{\sf sp}$  equation, because its concentrations do not change the expression
+		due to $\mathsf{[A]}$=1 \\
+		\quad $\bullet$ water ${\sf H_2O}$ would be excluded as well.	
 	\end{itemize}
 	%
 \end{frame}
@@ -1149,30 +1152,30 @@ The \alert{\textbf{solubility}} is the maximum amount of a substance that can be
 \footnotesize
 \vskip 5pt
 \begin{itemize}
-\item The balanced chemical equation of calcite dissolving in water is
+\item The balanced chemical equation of {\bf calcite dissolving in water} is
 \[
 \mathsf{CaCO_3(s) + H_2O(l) \rightleftharpoons Ca^{2+} + HCO^{-}_3 + OH^{-} }.
 \]
 \vskip -5pt
 %
 \pause
-\item A limit of how much calcite can be dissolved in a given volume of water is given by the \alert{\bf solubility product}
+\item The \alert{\bf solubility product} (the limit of how much calcite can be dissolved in a given volume of water) is
 %
 \[
-K_{sp} = [\mathsf{Ca^{2+}}]^1 \cdot [\mathsf{HCO^-_3}]^1 \cdot [\mathsf{OH^{-}}]^1 \approx 10^{-12},
+K_{\sf sp} = [\mathsf{Ca^{2+}}]^1 \cdot [\mathsf{HCO^-_3}]^1 \cdot [\mathsf{OH^{-}}]^1 \approx 10^{-12},
 \] 
-where $[\cdot]$ denotes morality of the species (mol/L). 
-%{\bf Note}: $K_{sp}$ is \textbf{independent} of solids and H$_2$O(l).
+where $[\cdot]$ denotes molarity (activity) of the species (mol/L). 
+%{\bf Note}: $K_{\sf sp}$ is \textbf{independent} of solids and H$_2$O(l).
 \pause
-%\item For calcite, $K_{sp} \approx 10^{-12}$. 
+%\item For calcite, $K_{\sf sp} \approx 10^{-12}$. 
 %
 %\item \textbf{Equilibrium expression of reaction} reads as  
 %$K_{\sp} = [\mathsf{Ca^{2+}}] \cdot [\mathsf{HCO^-_3}] \cdot [\mathsf{OH^{-}}]$, where $[\cdot]$ denotes concentration of the species. {\bf Note}:
 %
 %
 %\pause
-\item Since the molar ratio of products is $1 : 1 : 1$, 
-and we assume that morality of each species increased by equal amount 
+\item Assume that the molarity of each species increased by equal amount, 
+and the molar ratio of products is $1 : 1 : 1$:
 %
 \[
 [\mathsf{Ca^{2+}}] \approx (10^{-12})^{1/3} \mbox{mol/L} = 10^{-4} \mbox{mol/L}.
@@ -1180,17 +1183,15 @@ and we assume that morality of each species increased by equal amount
 \vskip -10pt
 %
 \pause
-\item The \textbf{amount of Ca$^{2+}$} is equal \textbf{solubility of calcite}, so since molar amount of calcite is $1 : 1$ with all the products, we have
+\item \textbf{Solubility of calcite} = the \textbf{amount of Ca$^{2+}$}, and the molar ratio of calcite and Ca$^{2+}$ is $1 : 1$:
 \[
 [\mathsf{CaCO_3(aq)}] = [\mathsf{Ca^{2+}}] = 10^{-4} \mbox{mol/L} 
 \]
 %
-or, using molar mass of calcite 100.09 g/mol,
+or, using the molar mass of calcite 100.09 g/mol,
 %
 \[
-[\mathsf{CaCO_3(aq)}] \approx 10^{-4}  \mbox{mol/L} \cdot 100 \mbox{g/mol} 
-\approx 10^{-2} \mbox{g/L}
-= 10 \mbox{mg/L},
+[\mathsf{CaCO_3(aq)}] \approx 10^{-4}  \mbox{mol/L} \cdot 100 \, \mbox{g/mol} \approx 10^{-2} \,\mbox{g/L} = 10 \, \mbox{mg/L},
 \]
 %
 which is relatively small in comparison to other minerals.
@@ -1205,23 +1206,21 @@ which is relatively small in comparison to other minerals.
 %https://www.sciencelearn.org.nz/resources/469-carbonate-chemistry#:~:text=Solubility,of%20more%20soluble%20calcium%20bicarbonate.
 \small
 \begin{itemize}
-%\item Solubility of $\mathsf{CaCO_3}$ \textbf{increases} as the temperature of the water  \textbf{increases}.
-%\pause
+\item Calcite has a \textbf{very low solubility} in \textbf{pure water} (we saw an analytic estimation is 10 \mbox{mg/L}) and it \textbf{increases} together with the temperature of water.
+\pause
 \item Solubility of $\mathsf{CaCO_3}$ \textbf{increases} as the pressure of the water \textbf{increases}.
+\pause
+\item \textbf{In rainwater/seawater}, however, saturated with carbon dioxide (which decreases pH), its \textbf{solubility is way higher}.
+\pause
+\item Solubility of calcite \textbf{decreases} in the CO$_2$-saturated water  as the temperature \textbf{increases} ({\bf unusual}!).
 \pause
 \item Demonstration of these properties can be found in website example 
 \href{https://reaktoro.org/applications/solubility/solubility-calcite-on-acidity-and-temperature.html}{\textcolor{indigo(dye)}{\it Calcite solubility in water and CO$_2$-saturated rainwater}} with \href{https://github.com/mtsveta/reaktoro-v2-workshop/blob/main/tutorials/solubility/solubility-calcite-in-water-rainwater.ipynb}{\textcolor{indigo(dye)}{\it Jupyter notebook tutorial}}.
 %
-\pause
-\item Calcite has a \textbf{very low solubility} in \textbf{pure water} (we saw an analytic estimation is 10 \mbox{mg/L}).
-\pause
-\item \textbf{In rainwater} saturated with carbon dioxide (which decreases pH, making it more acidic), its \textbf{solubility increases}.
 %$\Rightarrow$
 %
 %driving force behind the {\bf erosion of limestone rocks}.
 %
-\pause
-\item Solubility of calcite \textbf{decreases} in the CO$_2$-saturated water  as the temperature \textbf{increases} ({\bf unusual}!).
 \end{itemize}
 
 \begin{figure}\centering
@@ -1236,7 +1235,7 @@ which is relatively small in comparison to other minerals.
 % Calcite solubility example -- Stalagmites and stalactites
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{Calcite solubility example,  Stalagmites and stalactites}
+\begin{frame}{Calcite solubility example, Stalagmites and stalactites}
 
 \[\mathsf{CaCO_3(s) + CO_2(g) + H_2O(l) \rightleftharpoons Ca(HCO_3)_2(aq)}\]
 
@@ -1263,7 +1262,7 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 % Calcite solubility example -- Limestone fizzing
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{Calcite solubility example,  Limestone fizzing}
+\begin{frame}{Calcite solubility example, Limestone fizzing}
 
 \vskip 10pt
 \begin{figure}
@@ -1280,7 +1279,7 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 % Solubility of chlorargyrite, Example
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{Solubility of chlorargyrite, Example}
+\begin{frame}{Solubility of chlorargyrite, Quiz}
 	%
 	\begin{itemize}
 		\item Consider dissolution reaction of chlorargyrite 
@@ -1288,7 +1287,7 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 		\mathsf{AgCl(s) \rightleftharpoons Ag^{+}(aq) + Cl^{-}(aq)}
 		\]
 		%
-		\item  \alert{\bf Quiz}: What is solubility of AgCl(s) in 1 liter of water, where $K_{sp} = 1.8 \cdot 10^{-10}$?
+		\item  \alert{\bf Quiz}: What is solubility of AgCl(s) in 1 liter of water, where $K_{\sf sp} = 1.8 \cdot 10^{-10}$?
 		\begin{center}
 			\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
 			\quad
@@ -1300,10 +1299,55 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 		\item {\bf Answer}: 1 liter of water can dissolve $1.34 \cdot 10^{-5}$ mol/L of AgCl(s) at room temperature. \\
 		%
 		{\bf Note}: Compared with other types of salts, AgCl is also poorly soluble in water. \\
-		In contrast, table salt NaCl has a higher $K_{sp}$ and is, therefore, more soluble.
+		In contrast, table salt NaCl has a higher $K_{\sf sp}$ and is, therefore, more soluble.
 	\end{itemize}
 \end{frame}		
 %
+\begin{frame}{Solubility of lead(II) chloride, Quiz}
+	%
+	\begin{itemize}
+		\item Consider dissolution reaction of lead(II) chloride 
+		\[
+		\mathsf{PbCl_2(s) \rightleftharpoons Pb^{+}(aq) + 2\, Cl^{-}(aq)}
+		\]
+		% 
+		with initial concentration of $\mathsf{PbCl_2(s)}$ = 0.1 mol.
+		%
+		\item  \alert{\bf Quiz}: What is solubility product $K_{\sf sp}$ of $\mathsf{PbCl2(s)}$ in 1 liter of water?
+		\begin{center}
+			\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
+			\quad
+			or 
+			\quad
+			\includegraphics[height=0.3\columnwidth]{figures/chemical-equilibrium/poll.png}
+		\end{center}
+		\hiddenpause
+		\item {\bf Answer}:  0.004.
+	\end{itemize}
+\end{frame}	
+% \begin{frame}{Solubility of chlorargyrite, Quiz}
+% 	%
+% 	\begin{itemize}
+% 		\item Consider dissolution reaction of chlorargyrite 
+% 		\[
+% 		\mathsf{AgCl(s) \rightleftharpoons Ag^{+}(aq) + Cl^{-}(aq)}
+% 		\]
+% 		%
+% 		\item  \alert{\bf Quiz}: What is solubility of AgCl(s) in 1 liter of water, where $K_{\sf sp} = 1.8 \cdot 10^{-10}$?
+% 		\begin{center}
+% 			\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
+% 			\quad
+% 			or 
+% 			\quad
+% 			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
+% 		\end{center}
+% % 		\hiddenpause
+% % 		\item {\bf Answer}: 1 liter of water can dissolve $1.34 \cdot 10^{-5}$ mol/L of AgCl(s) at room temperature. \\
+% % 		%
+% % 		{\bf Note}: Compared with other types of salts, AgCl is also poorly soluble in water. \\
+% % 		In contrast, table salt NaCl has a higher $K_{\sf sp}$ and is, therefore, more soluble.
+% 	\end{itemize}
+% \end{frame}
 % --------------------------------------------------------------------------------------------------------------------%
 % Saturation index
 % --------------------------------------------------------------------------------------------------------------------%
@@ -1314,13 +1358,13 @@ The \alert{\textbf{saturation index}} indicates the saturation state of
 a solution with respect to a mineral phase, which is given by
 %
 \[
-\boxed{ \mathrm{SI} = \log_{10} \frac{Q}{K_{sp}}},
+\boxed{ \mathrm{SI} = \log_{10} \frac{Q}{K_{\sf sp}}},
 \] 
 where 
 \begin{itemize}
 \item $Q$ is the \emph{ion activation product (IAP) / reaction quotient} of activities of the dissolved species (characteristic of non-equilibrium solution), 
 and 
-\item $K_{sp}$ is the \emph{solubility product / equilibrium constant}. 
+\item $K_{\sf sp}$ is the \emph{solubility product / equilibrium constant}. 
 \end{itemize}
 %
 \[
@@ -1357,10 +1401,10 @@ and
 		$\mathsf{BaSO_4(s) \rightleftharpoons Ba^{2+}(aq) + SO_4^{2-}(aq).}$
 		%
 		%
-		\item Solubility product $K_{sp}$ of barium sulfate is 1.08e-10 at 25 ${\rm ^\circ}$C.
+		\item Solubility product $K_{\sf sp}$ of barium sulfate is 1.08e-10 at 25 ${\rm ^\circ}$C.
 		%
-		\item  \alert{\bf Quiz}: What can be said about the water w.r.t. to barium sulfate if \\
-		${\sf [Ba^{2+}}]=2.9 \cdot$ 1e-4 molal
+		\item  \alert{\bf Quiz}: What can be said about the water w.r.t. to barium sulfate if
+		${\sf [Ba^{2+}}]=2.9 \cdot$ 1e-4 molal and 
 		${\sf [SO_4^{2-}]}=1.8 \cdot$ 1e-4 molal
 		%
 		using formula
@@ -1368,7 +1412,7 @@ and
 		{\footnotesize
 		\[
             \mathrm{SI} 
-            = \log_{10} \frac{Q}{K_{sp}} \quad 
+            = \log_{10} \frac{Q}{K_{\sf sp}} \quad 
             \begin{cases}
             < 0& \mbox{solution is \textbf{undersaturated} $\Rightarrow$ the mineral may be dissolved }\\
             = 0& \mbox{solution is \textbf{saturated} \qquad \:\,$\Rightarrow$ the mineral in equilibrium with solution}\\
@@ -1402,7 +1446,7 @@ and
 		\item Demonstration of gypsum/anhydrite solubility: 
 		%
 		Jupyter notebook tutorial 
-		\href{https://github.com/mtsveta/reaktoro-jupyter/blob/geofluids-examples/tutorial/eq.anhydrite-solubility.ipynb}{\textcolor{indigo(dye)}{\it Gypsum/anhydrite solubility in water}}.
+		\href{https://github.com/mtsveta/reaktoro-v2-workshop/blob/main/tutorials/solubility/solubility-anhydrite.ipynb}{\textcolor{indigo(dye)}{\it Gypsum/anhydrite solubility in water}}.
 		%
 		\item Investigation on how saturated the Evian water with carbonates can be found in 
 		Jupyter notebook tutorial \href{https://reaktoro.org/applications/miscellaneous/evian-water-analysis.html}{\textcolor{indigo(dye)}{\it Analysis of the Evian water}}.
@@ -1481,7 +1525,7 @@ When mixing 0.1 molal of NaCl, it dissolves to 0.1 molal Na$^+$ and 0.1 molal Cl
 %
 \begin{frame}{Reduction/oxidation potential, pE}
 \begin{itemize}
-	\item  \alert{\textbf{Oxidation / reduction}} are the reactions, where species either esquire or lose electors, e.g., 
+	\item  \alert{\textbf{Oxidation / reduction}} are the reactions, where species esquire / lose electrons, e.g., 
 	%
 	%\item Species in an aqueous solution can {\bf donate or accept electrons}, for example:
 	%
@@ -1524,7 +1568,7 @@ where
 \begin{frame}{Hydrogen potential, pH}
 
 \begin{itemize}
-	\item The \alert{\textbf{$\mathsf{pH}$}} of a solution is an indication of the \textbf{tendency} of the solution \textbf{to donate hydrogen ions}
+	\item The \alert{\textbf{pH}} of a solution is an indication of the \textbf{tendency} of the solution \textbf{to donate hydrogen ions}
 	or measure of the \textbf{relative amount of free hydrogen ions} in the solution. 
 	%
 		\pause
@@ -1592,18 +1636,24 @@ where
 			\quad
 			or 
 			\quad
-			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
+			\includegraphics[height=0.13\columnwidth]{figures/chemical-equilibrium/poll.png}
 		\end{center}
-		\hiddenpause
-		\item {\bf Answer}: 1.09374 g. 
+ 		\hiddenpause
+ 		\item {\bf Answer}: 
+        1) find concentration of hydrogen ions: 
+        $\mathsf{[H^+] = 10^{-pH}}$ = 0.1 mol/L \\
+        2) amount of hydrogen per 0.3 L: 
+        $\mathsf{n(H^+) = [H^+] mol/L \cdot V_{H_2O}}$ 
+        = 0.1 $\cdot$ 0.3 = 0.03 mol \\
+        3) mass of HCl: 
+        $m_{\mathsf{HCl}}$ = 0.03 mol $\cdot$ 36.458 g/mol = 1.09374 
 	\end{itemize}
-	
 \end{frame}
 % --------------------------------------------------------------------------------------------------------------------%
 % pH, Examples i
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{pH, Examples \; i}
+\begin{frame}{pH, Examples \, i}
 	
 	\lcol
 	\vskip -5pt
@@ -1637,7 +1687,7 @@ where
 % pH, Examples ii
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{pH, Examples \; ii}
+\begin{frame}{pH, Examples \, ii}
 \footnotesize
 \lcol
 
